# sac_log_converter

./: .pre-commit-config.yaml  README.md  setup.cfg  setup.py
config/: config.json  config.yaml  documentation.cfg  documentation.py  schema.yaml
examples/: sample_leef_events.txt
examples/example-config/: config.yaml
src/sac_log_converter/: Getconfig.py  LeefToJSON.py  converter.py  getConfig.py  get_config.py  leefToJson.py  leef_to_json.py  output.txt  sample.py  utils.py
src/sac_log_converter/constants/: __init__.py  config.py  general.py  messages.py
tests/: __init__.py  test.py  test_leef.py
