[metadata]
name = log converter module
version = 1.0.0
author = Amal m das
description = This is a reusable module
long_description = This is a reusable module to convert leef to json and vice-versa
url = https://github.com/amalmdas-sacumen/sac_log_converter
keywords = sample, example, setuptools,Getconfig,main

[options]
python_requires = >=3.7, <4

[options.extras_require]
test = pytest
       coverage

[options.package_data]
sample = input_sample.txt'
