[metadata]
name = sac_log_converter
version = 1.0.0
url = https://github.com/pranav-sacumen/sac_log_converter
license = Private
author = Sacumen
author_email = pranav.kalariya@sacumen.com
maintainer = Sacumen
maintainer_email = pranav.kalariya@sacumen.com
description = sac_requests module to send request to external resources over HTTP/S.
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries

[options]
package_dir =
    = src
packages = find:
include_package_data = true
zip_safe = false
python_requires = >= 3.6
bdist_wheel =
    universal = false

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    src/
    tests

[coverage:paths]
source =
    src/

[coverage:report]
fail_under = 80
precision = 2
show_missing = True
skip_covered = True


[poetry]
name= isort
description= "This hook runs isort."
entry= isort
language= python
files= \.py$

[flake8]
max-complexity = 12
select = B,C,E,F,W,B9,B950,ISC
exclude = .venv/, tests/*

[flake8:local-plugins]
paths = .

[pydocstyle]
match = (?!test_).*\.py
match_dir = ^(?!(.venv|old|tests).*)

[pyupgrade]
args = py36-plus

[pre-commit-hooks]
autofix = True
maxkb = 500
allow-multiple-documents = True
exclude= ^tests/.+/profiles.d/.*

[bandit]
exclude = tests

[pylint]
ignore = tests
persistent = no
load-plugins = pylint_common, pylint_flask, pylint_plugin_utils
unsafe-load-any-extension = no
max-line-length = 200
output-format = colorized

[pylint.messages_control]
disable = C0411,E0401,F0401,R0902,W0212,W0105,W0107,C0415

[pylint.similarities]
min-similarity-lines=4
ignore-comments=yes
ignore-docstrings=yes
ignore-imports=no

[pylint.imports]
allow-wildcard-with-all=no

[pylint.designs]
max-args=7
max-attributes=7
max-bool-expr=5
max-branches=10
max-locals=15
max-parents=7
max-public-methods=20
max-returns=4
max-statements=50
min-public-methods=2

[xenon]
max-average=B
exclude=local*,
ignore=lib_*,local*,target,tests

[mypy]
files = src
python_version = 3.6
allow_redefinition = True
disallow_subclassing_any = False
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
no_implicit_optional = True
local_partial_types = True
strict_equality = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = True
warn_unreachable = True

[mypy-asgiref.*]
ignore_missing_imports = True

[mypy-blinker.*]
ignore_missing_imports = True

[mypy-dotenv.*]
ignore_missing_imports = True

[mypy-cryptography.*]
